# proxybot

./: .gitignore  README.md  setup.cfg
src/proxybot/: __init__.py  __main__.py  cli.py  db.py
