[metadata]
name = proxybot
version = 0.1.0
description = A Python project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/trueleo/proxybot
author = Satyam Singh
author_email = trueleo@proton.me
license = MIT
license_file = LICENSE
classifiers = 
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: Implementation :: CPython
	Typing :: Typed

[options]
packages = find:
install_requires = 
	python-telegram-bot==21.1.1
python_requires = >=3.8
package_dir = =src

[options.packages.find]
where = ./src

[options.entry_points]
console_scripts = 
	proxybot=proxybot.cli:cli

[options.extras_require]
dev = 
	black
	pyright

